--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
         </figure>
         <nav id='nav_header'>
             <ul>
-              <li><a data-path='home' >Home</a></li>
-              <li><a data-path='controle_aula' >Controle de Aula</a></li>
-              <li><a data-path='gerador_contrato' >Gerador de Contrato</a></li>
+              <li><a data-path='home'  data-script_src='home' >Home</a></li>
+              <li><a data-path='controle_aula' data-script_src='controle_aula' >Controle de Aula</a></li>
+              <li><a data-path='gerador_contrato'  data-script_src='gerador_contrato' >Gerador de Contrato</a></li>
     
             </ul>
           </nav>
