--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
   </head>
   <body>
+    <div class='block_screen'></div>
     <header>
       <div id='header_center'>
         <title>Header</title>
