bimestres ordenados WIP
Visualização dos objetos bimestre_bd alterada para a ordem crescente

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,8 @@
           </div>
     </div>
     </header>
-    <div id='app'>
+    <div id='app' class='container'>
+      
 
     </div>
 <footer></footer>
