--- a/src/index.html
+++ b/src/index.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>SETA CURSOS APP</title>
-    <link rel='stylesheet' href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
-
-
-
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
   </head>
   <body>
-    <div id='block_screen'></div>
+    <div id="block_screen"></div>
     <header>
-      <div id='header_center'>
+      <div id="header_center">
         <title>Header</title>
         <figure>
-          <img src='./assets/img/logo.png' />
+          <img src="./assets/img/logo.png" />
         </figure>
-        <nav id='nav_header'>
-            <ul>
-              <li><a data-path='home'  data-script_src='home' >Home</a></li>
-              <li><a data-path='controle_aula' data-script_src='controle_aula' >Controle de Aula</a></li>
-              <li><a data-path='gerador_contrato'  data-script_src='gerador_contrato' >Gerador de Contrato</a></li>
-    
-            </ul>
-          </nav>
-          <div id='login'>
-          </div>
-    </div>
+        <nav id="nav_header">
+          <ul>
+            <li><a data-path="home" data-script_src="home">Home</a></li>
+            <li>
+              <a data-path="controle_aula" data-script_src="controle_aula"
+                >Controle de Aula</a
+              >
+            </li>
+            <li>
+              <a data-path="gerador_contrato" data-script_src="gerador_contrato"
+                >Gerador de Contrato</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <div id="login"></div>
+      </div>
     </header>
-    <div id='app' class='container'>
-      
+    <div id="app" class="container"></div>
+    <footer></footer>
 
-    </div>
-<footer></footer>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
+    <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-analytics.js"></script>
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyCQ0IIED6S4yHGwd4iePApe3IDmrVW6-Cs",
-    authDomain: "seta-cursos-app.firebaseapp.com",
-    projectId: "seta-cursos-app",
-    storageBucket: "seta-cursos-app.appspot.com",
-    messagingSenderId: "604551662801",
-    appId: "1:604551662801:web:617516e76e3f23ce35c9f0",
-    measurementId: "G-MB10BFHBQ0"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-  const db = firebase.firestore();
-  db.settings({timestampsInSanpshots: true});
-  
-</script>
-<script src='./render.js' ></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-analytics.js"></script>
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyCQ0IIED6S4yHGwd4iePApe3IDmrVW6-Cs",
+        authDomain: "seta-cursos-app.firebaseapp.com",
+        projectId: "seta-cursos-app",
+        storageBucket: "seta-cursos-app.appspot.com",
+        messagingSenderId: "604551662801",
+        appId: "1:604551662801:web:617516e76e3f23ce35c9f0",
+        measurementId: "G-MB10BFHBQ0",
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+      const db = firebase.firestore();
+      db.settings({ timestampsInSanpshots: true });
+    </script>
+    <script type="module" src="./modules/controle_aula/index.js" defer ></script>
+    <script type="module" src="./render.js" defer ></script>
   </body>
 </html>
