Refatoração form_add_aluno

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 
         </nav>
       </aside>
-      <div id='content_page'></div>
+      <div id='page_content'></div>
       <footer></footer>
     </div>
    
