Refatoração CSS - WIP

--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
           <div id="login"></div>
         </div>
       </header>
-      <aside id='bg_main_menu_lateral'>
+      <aside id='bg_main_menu_lateral_admin'>
           
         <figure id='bg_logo'>
           <img src="./assets/img/logo.png" />
         </figure>
-          <nav id='main_menu_lateral'>
+          <nav id='nav_main_menu_lateral_admin'>
             <ul>
 
               <li><a data-path="home" data-script_src="home">
