--- a/src/appContent/adminContent/index.html
+++ b/src/appContent/adminContent/index.html
@@ -8,8 +8,8 @@
             <img id='user_icon_img'src='../src/assets/img/userIcon/avatarDefault.png'>
           </span>
           <div id='bg_username'>
-          <span id='username'>Fulano de Tal</span>
-          <span id='user_privilegio'>Administrador</span>
+          <span id='username'></span>
+          <span id='user_privilegio'></span>
          </div>
         </div>
         <button id='logout_user'><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
