--- a/src/appContent/adminContent/index.html
+++ b/src/appContent/adminContent/index.html
@@ -39,12 +39,12 @@
               Controle de Aula</a
             >
           </li>
-          <li  data-auth='gerador_contrato'>
-            <a data-path="geradorContrato" data-script_src="geradorContrato">
+          <li  data-auth='contratos'>
+            <a data-path="contratos" data-script_src="contratos">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-text-fill" viewBox="0 0 16 16">
                 <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM5 4h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm-.5 2.5A.5.5 0 0 1 5 6h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zM5 8h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm0 2h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1z"/>
               </svg>
-              Gerador de Contrato</a>
+              Contratos</a>
           </li>
  
           <li  data-auth='alunos'>
