Ajustes de layout

--- a/src/appContent/adminContent/index.html
+++ b/src/appContent/adminContent/index.html
@@ -115,6 +115,8 @@
     </nav>
   </aside>
   <div id='page_content'></div>
-  <footer></footer>
+  <footer>
+    v.1.0.0
+  </footer>
   
 </div><!--appContent-->
