--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
   </head>
   <body>
+    <div id='window-bar'></div>
    
     <div id="app" >
     </div><!--APP-->
