--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,30 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
   </head>
   <body>
-    <div id='window-bar'></div>
-   
+    <div id='window-bar'>
+      <div id='bg_menu_window_bar'>
+        <figure id='bg_logo'>
+          <img src="./assets/img/logo.png" />
+        </figure>
+
+      </div>
+      <div id='bg_buttons_window_bar'>
+<button id='btn_minimize_window'>
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+  </svg>
+</button>
+<button id='btn_max_restore_window'>
+  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-square" viewBox="0 0 16 16">
+  <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+</svg>
+</button>
+<button id='btn_close_app'>
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+</svg></button>
+</div>
+    </div>
     <div id="app" >
     </div><!--APP-->
     <script type="module" src="./render.js" defer ></script>
