fix: deleição de dados parc. no status dos cursos

--- a/src/appContent/index.html
+++ b/src/appContent/index.html
@@ -1,4 +1,4 @@
-<div id='adminContent' class='appContent'>
+<div id='appContent' class='appContent'>
   <div id='page_content'></div>
   <footer>
     v.1.0.0
