feat: módulos de certificado adicionado

--- a/src/appContent/headerAdmin.html
+++ b/src/appContent/headerAdmin.html
@@ -2,7 +2,7 @@
     <div id="header_admin_center">
         <div id='login_info'>
 
-            <div id="user_menu">
+            <div id="user_menu" style="display:none">
                 <li>
                     <a href='#' id="btn_todolist">
                         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
